added more line

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -7,6 +7,8 @@
     vertical-align:  middle;">
 {% if name %}
   <h1>Hello from {{ name }}!</h1>
+  <h2>Hello my dear daughter {{ daughter_name }} </h2>
+  <h3> You are {{ age }} years old </h3>
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
