--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,7 +8,8 @@
 {% if name %}
   <h1>Hello from {{ name }}!</h1>
   <h2>Hello my dear daughter {{ daughter_name }} </h2>
-  <h3> You are {{ age }} years old </h3>
+  <h3> You are {{ age }} years old !! </h3>
+  <h3> Hope you are enjoying your homework </h3>
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
